--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,4 @@ dj-database-url==2.1.0
 Django==4.0
 django-cors-headers==3.8.0
 django-filter==24.2
-djangorestframework==3.12.4
-python==3.9
+djangorest
