--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+asgiref==3.8.1
 dj-database-url==2.1.0
 Django==4.0
 django-cors-headers==3.8.0
 django-filter==24.2
 djangorest
-python-dateutil==3.8
+requests==2.28.1
+requests-oauthlib==1.3.1
+sqlparse==0.4.2
